# wordle

./: 1.txt  CMakeLists.txt  dictionaryENG.txt  main.cpp
include/: console_io.h  game.h  game_dictionary.h
src/: console_io.cpp  game.cpp  game_dictionary.cpp
